k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: omnimedical
  labels:
    app.kubernetes.io/name: omnimedical-suite
    app.kubernetes.io/part-of: omnimedical
